# robotic_waiter

./: LICENSE  README.md
cyton_gamma_1500_description/: cyton_gamma_1500.urdf  cyton_gamma_1500_macros.urdf.xacro  dual_arm.rviz  myTestRobot.urdf  testRobot.urdf.xacro
cyton_gamma_1500_description/launch/: gamma_1500_rvizview.launch  (+3 more)
cyton_gamma_1500_minicam_description/: CMakeLists.txt  cyton_gamma_1500_minicam.rviz  cyton_gamma_1500_minicam.urdf  cyton_gamma_1500_minicam.urdf.xacro  cyton_gamma_1500_minicam_macros.urdf.xacro  package.xml
dp_ptu_46_description/: CMakeLists.txt  README  dp_ptu_46.rviz  dp_ptu_46.urdf  dp_ptu_46.urdf.xacro  dp_ptu_46_macros.urdf.xacro  package.xml
dp_ptu_46_description/launch/: dp_ptu_46.launch  gazebo.launch  generate_urdf.launch  xacrodisplay.launch
dp_ptu_46_description/meshes/: tilt.dae
gpd_grasp/: CMakeLists.txt  package.xml
phoebe_cv2/: CMakeLists.txt  package.xml
phoebe_description/: CMakeLists.txt  gen_ik.sh  package.xml  phoebe.gv  phoebe_effort_joints_notWorking.urdf
phoebe_description/config/: joint_names.yaml  phoebe_control.yaml
phoebe_description/launch/: generate_urdf.launch  phoebe.launch  phoebe.rviz  phoebe_control.launch  spawn.launch  spawn_robot.launch  start_world.launch  test.rviz  view_rviz.launch
phoebe_description/launch_scripts/: exercises_tests.sh
phoebe_description/meshes/: cam_bracket.dae  mount.dae  pan.dae  phoebe.dae
phoebe_description/urdf/: cyton_gamma_1500_macros.urdf.xacro  dp_ptu_46_macros.urdf.xacro  phoebe.gazebo  phoebe.urdf  phoebe.urdf.xacro  phoebe_gen.urdf  phoebe_generated.urdf  phoebe_old.urdf  phoebe_working.urdf
phoebe_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phoebe_navigation/: CMakeLists.txt  package.xml
phoebe_newmoveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phoebe_perception/: CMakeLists.txt  package.xml
phoebe_sim/: CMakeLists.txt  frames.gv  package.xml  phoebe.rviz  setup.py
task_manager/: CMakeLists.txt  package.xml  robotic_waiter_tree.xml
(+169 files in other folders)
