<?xml version="1.0"?>
<package>
  <name>dp_ptu_46_description</name>
  <version>0.1.0</version>
  <description>URDF description for the Directed Perception PTU-46-17.5 pan-tilt unit</description>

  <author email="gert@cs.ttu.ee">Gert Kanter</author>
  <maintainer email="gert@cs.ttu.ee">Gert Kanter</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dp_ptu_46_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
