<?xml version="1.0"?>
<package>
  <name>phoebe_description</name>
  <version>0.0.1</version>
  <description>Description of the Phoebe robot</description>

  <maintainer email="gert@cs.ttu.ee">Gert Kanter</maintainer>


  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/phoebe_description</url> -->


  <author email="gert@cs.ttu.ee">Gert Kanter</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>cyton_gamma_1500_description</build_depend>
  <run_depend>cyton_gamma_1500_description</run_depend>


  <export>
  </export>
</package>
